# Ponderada_Nicola-culling_game

./: README.md
arquivos/cg/: semalvopt2.py
cg/: resolver.py  resolverpt2.py  setup.py
cg_solution/: CMakeLists.txt  package.xml
cg_solution/src/: resolver.cpp  resolverpt2.cpp  semalvopt2.cpp
